# jaxdentify

./: .gitignore  README.md  demo.ipynb  jaxdentify.7z  pyproject.toml  run_examples.py
examples/: finite_strain_neo_hookean.py  identification_plasticity_bayesian_mala.py  identification_plasticity_bfgs.py  identification_plasticity_bfgs_parameter_mappings.py  identification_plasticity_flow_vi.py  identification_plasticity_gaussian_approx_and_vi.py  identification_plasticity_mala.py  identification_plasticity_optx.py  identification_plasticity_parameter_mapping.py  identification_viscoplasticity.py  linear_elasticity_autodiff_demo.py  plasticity_isotropic_hardening.py  plasticity_isotropic_hardening_no_branching.py  plasticity_isotropic_hardening_no_branching_make.py  plasticity_isotropic_hardening_uniaxial_stress.py  plasticity_isotropic_kinematic_hardening_uniaxial_stress.py  plasticity_isotropic_kinematic_hardening_uniaxial_stress_auto_build.py  plasticity_vmap.py  run_optimisers.py  viscoelasticity_maxwell.py  viscoplasticity.py  viscoplasticity_isotropic_hardening_no_branching_make.py  viscoplasticity_isotropic_hardening_no_branching_make_anthony_tmp.py
myproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
optimization/: inference.py  mcmc_hmc.py  mcmc_mala.py  optimizers.py  parameter_mappings.py  postprocess.py  preconditioning.py  samplers.py  targets.py  vi_flow.py
scripts/: test_flow_vi_banana.py  test_gaussian_vi_banana.py  test_hmc_banana.py  test_mala_banana.py  test_mala_precond_banana.py  test_vi_banana.py
simulation/: algebra.py  newton.py  (+1 more)
(+2 files in other folders)
